# refractometer-raytracer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  lightSamples.csv  prismSamples.csv  pyproject.toml  test.py
.github/actions/ctest/: action.yml
.github/actions/format/: action.yml
.github/actions/lint/: action.yml
.github/workflows/: ci.yml  tests.yml
docs/: class-diagram.mmd
src/: main.cpp
src/detector/: IDetector.h  PinHoleDetector.cpp  PinHoleDetector.h
src/light/: ILightSource.h  SlitLight.cpp  SlitLight.h  Spectrum.h
src/sampler/: ISampler.h  Sampler.h  SpectrumSampler.h
src/shape/: IShape.h  Prism.h
src/vecmath/: Bounds3.h  Point2.h  Point3.h  Vector2.h  Vector3.h
tests/: CMakeLists.txt
tests/light/: test_SlitLight.cpp  test_Spectrum.cpp
tests/sampler/: test_sampler.cpp
tests/vecmath/: test_Bounds3.cpp  test_Point2.cpp  test_Point3.cpp  test_Vector2.cpp  test_Vector3.cpp
